School, Event and Course schema

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -22,8 +22,9 @@
             {% endif %}
 
             <div class="related-content__listing grid">
+                <meta property="schema:provider" content="Royal College of Art" />
                 {% for related_item in related_section.related_items %}
-                    <div class="related-content__meta">
+                    <div class="related-content__meta" typeof="schema:Course">
                         <p class="related-content__title body body--one">
                             <a
                                 href="{{ related_item.url }}"
@@ -31,12 +32,13 @@
                                 data-related-title
                                 data-target-image="{{ forloop.counter }}"
                                 data-parent-group={{ forloop.parentloop.counter }}
+                                property="name"
                             >
                                 {{ related_item.title }}
                             </a>
                         </p>
                         {% if related_item.degree_level %}
-                            <p class="related-content__degree body body--two">{{ related_item.degree_level }}</p>
+                            <p class="related-content__degree body body--two" property="EducationalCredentialAwarded">{{ related_item.degree_level }}</p>
                         {% elif related_item.programme_type %}
                             <p class="related-content__degree body body--two">{{ related_item.programme_type }}</p>
                         {% elif related_item.meta %}
@@ -48,7 +50,6 @@
                     <p class="related-content__copy body body--two">
                         {% firstof related_item.programme_description_subtitle related_item.introduction related_item.listing_summary %}
                     </p>
-
                     {# we are re-using this component for some page types that don't have hero images :/ #}
                     {% if related_item.hero_image %}
                         {% image related_item.hero_image fill-500x500 as programme_image %}
@@ -58,7 +59,6 @@
                     <div class="related-content__image-container">
                         <img class="related-content__image {% if forloop.first %}is-visible{% endif %}" src="{{ programme_image.url }}" alt="{{ programme_image.alt }}" data-image="{{ forloop.counter }}">
                     </div>
-
                 {% endfor %}
             </div>
             {% if related_section.link.url and related_section.link.title or related_section.page_link  %}
