--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -10,7 +10,9 @@
 
     {% include "patterns/molecules/hero/hero.html" with modifier="medium" %}
 
-    <div class="page page--overlap" >
+    <div class="page page--overlap" typeof="WebPage">
+
+        <meta property="schema:provider" content="Royal College of Art" />
 
         <div class="page__notch grid">
             <div class="page__notch-block bg bg--dark"></div>
@@ -23,7 +25,7 @@
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
                     {% if page.title %}
-                        <h1 class="title-area__heading heading heading--display-two">{{ page.title }}</h1>
+                        <h1 class="title-area__heading heading heading--display-two" property="name">{{ page.title }}</h1>
                     {% endif %}
                 </div>
                 {% if hero_image_credit or hero_image %}
@@ -35,7 +37,7 @@
             {% if page.introduction %}
                 <div class="introduction grid">
                     <div class="introduction__container">
-                        <h2 class="section__heading heading heading--five">
+                        <h2 class="section__heading heading heading--five" property="description">
                             {{ page.introduction|richtext }}
                         </h2>
                     </div>
