Move related content image above grid lines

--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -48,6 +48,7 @@
         }
 
         #{$root}__image-container {
+            @include z-index(above-gridlines);
             position: absolute;
             right: var(--margin-width);
             top: 0;
