Adding schema prefix

--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -10,7 +10,7 @@
 
     {% include "patterns/molecules/hero/hero.html" with modifier="medium" %}
 
-    <div class="page page--overlap" typeof="WebPage">
+    <div class="page page--overlap" typeof="schema:WebPage">
 
         <meta property="schema:provider" content="Royal College of Art" />
 
