--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page--example.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% if page.introduction %}
         <div class="introduction grid">
-            <p class="introduction__text introduction__text--no-margin section__heading heading heading--five">
+            <p class="introduction__text introduction__text--no-margin heading heading--five layout__@large-start-three layout__span-two">
                 {{ page.introduction }}
             </p>
         </div>
@@ -43,61 +43,61 @@
                                 <h2 class="form__heading heading heading--four">Inputs</h2>
                                 {% include "patterns/atoms/form-input/form-input.html" %}
                                 {% include "patterns/atoms/form-input/form-input--error.html" %}
-                                {% include "patterns/atoms/form-input/form-input--required.html" %}    
-                                {% include "patterns/atoms/form-input/form-input--help.html" %} 
+                                {% include "patterns/atoms/form-input/form-input--required.html" %}
+                                {% include "patterns/atoms/form-input/form-input--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Telephone</h2>
                                 {% include "patterns/atoms/form-tel/form-tel.html" %}
                                 {% include "patterns/atoms/form-tel/form-tel--error.html" %}
-                                {% include "patterns/atoms/form-tel/form-tel--required.html" %}    
-                                {% include "patterns/atoms/form-tel/form-tel--help.html" %} 
+                                {% include "patterns/atoms/form-tel/form-tel--required.html" %}
+                                {% include "patterns/atoms/form-tel/form-tel--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Select</h2>
                                 {% include "patterns/atoms/form-select/form-select.html" %}
                                 {% include "patterns/atoms/form-select/form-select--error.html" %}
-                                {% include "patterns/atoms/form-select/form-select--required.html" %}    
-                                {% include "patterns/atoms/form-select/form-select--help.html" %} 
+                                {% include "patterns/atoms/form-select/form-select--required.html" %}
+                                {% include "patterns/atoms/form-select/form-select--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Textarea</h2>
                                 {% include "patterns/atoms/form-textarea/form-textarea.html" %}
                                 {% include "patterns/atoms/form-textarea/form-textarea--error.html" %}
-                                {% include "patterns/atoms/form-textarea/form-textarea--required.html" %}    
-                                {% include "patterns/atoms/form-textarea/form-textarea--help.html" %} 
+                                {% include "patterns/atoms/form-textarea/form-textarea--required.html" %}
+                                {% include "patterns/atoms/form-textarea/form-textarea--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">File upload</h2>
                                 {% include "patterns/atoms/form-file/form-file.html" %}
                                 {% include "patterns/atoms/form-file/form-file--error.html" %}
-                                {% include "patterns/atoms/form-file/form-file--required.html" %}    
-                                {% include "patterns/atoms/form-file/form-file--help.html" %} 
+                                {% include "patterns/atoms/form-file/form-file--required.html" %}
+                                {% include "patterns/atoms/form-file/form-file--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Checkbox</h2>
                                 {% include "patterns/atoms/form-checkbox/form-checkbox.html" %}
                                 {% include "patterns/atoms/form-checkbox/form-checkbox--error.html" %}
-                                {% include "patterns/atoms/form-checkbox/form-checkbox--required.html" %}    
-                                {% include "patterns/atoms/form-checkbox/form-checkbox--help.html" %} 
+                                {% include "patterns/atoms/form-checkbox/form-checkbox--required.html" %}
+                                {% include "patterns/atoms/form-checkbox/form-checkbox--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Radio</h2>
                                 {% include "patterns/atoms/form-radio/form-radio.html" %}
                                 {% include "patterns/atoms/form-radio/form-radio--error.html" %}
-                                {% include "patterns/atoms/form-radio/form-radio--required.html" %}    
-                                {% include "patterns/atoms/form-radio/form-radio--help.html" %} 
+                                {% include "patterns/atoms/form-radio/form-radio--required.html" %}
+                                {% include "patterns/atoms/form-radio/form-radio--help.html" %}
                             </div>
                             <div class="section__row section__row--last-small">
                                 <h2 class="form__heading heading heading--four">Single Checkbox</h2>
                                 {% include "patterns/atoms/form-checkbox-single/form-checkbox-single.html" %}
                                 {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--error.html" %}
-                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--required.html" %}    
-                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--help.html" %} 
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--required.html" %}
+                                {% include "patterns/atoms/form-checkbox-single/form-checkbox-single--help.html" %}
                             </div>
                         </div>
                         <div class="form__action">
-                            {% include "patterns/atoms/exceptional-cta/exceptional-cta.html" with text="Send your enquiry" button=True %} 
+                            {% include "patterns/atoms/exceptional-cta/exceptional-cta.html" with text="Send your enquiry" button=True %}
                         </div>
                     </div>
                 </form>
