--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% if page.introduction %}
         <div class="introduction grid">
-            <p class="introduction__text introduction__text--no-margin section__heading heading heading--five">
+            <p class="introduction__text introduction__text--no-margin heading heading--five layout__@large-start-three layout__span-two">
                 {{ page.introduction }}
             </p>
         </div>
@@ -56,7 +56,7 @@
                                 {% endif %}{% if widget_type == 'textarea' %}
                                 data-focus data-focustype='textarea'
                             {% endif %}>
-                                        <div class="form-item__container">
+                                        <{% if widget_type == 'checkbox_select_multiple' %}fieldset{% else %}div{% endif %} class="form-item__container">
                                             {% if field.errors %}
                                                 <div class="form-item__errors">
                                                     {{ field.errors }}
@@ -68,15 +68,15 @@
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
                                             {% else %}
                                                 <label for="{{ field.id_for_label }}" class="form-item__label {% if field.field.required %}required{% endif %}">{{ field.label }} {% if field.field.required %} <span class="form-item__required">*</span>{% endif %}</label>
-                                                {% if widget_type == 'checkbox_select_multiple'%}<p class="form-item__instruction">Select all that apply</p>{% endif %}
+                                                {% if widget_type == 'checkbox_select_multiple' %}<p class="form-item__instruction">{{ field.help_text|default:'Select all that apply' }}</p>{% endif %}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}<div class="{{ widget_type }}">{% endif %}
                                                 {{ field }}
                                                 {% if widget_type == 'date_input' or widget_type == 'date_time_input' %}</div>{% endif %}
                                             {% endif %}
 
-                                        </div>
+                                        </{% if widget_type == 'checkbox_select_multiple' %}fieldset{% else %}div{% endif %} >
 
-                                        {% if field.help_text %}<div class="form-item__help">{{ field.help_text }}</div>{% endif %}
+                                        {% if field.help_text and widget_type != 'checkbox_select_multiple' %}<div class="form-item__help">{{ field.help_text }}</div>{% endif %}
 
                                     </div>
                                 {% endwith %}
@@ -84,7 +84,7 @@
                             {% endfor %}
                         </div>
                         <div class="form__action">
-                            {% include "patterns/atoms/exceptional-cta/exceptional-cta.html" with text=page.action_text|default:"Send your enquiry" button=True %} 
+                            {% include "patterns/atoms/exceptional-cta/exceptional-cta.html" with text=page.action_text|default:"Send your enquiry" button=True %}
                         </div>
                     </div>
                 </form>
