Adding no hero class to templates without heroes

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -3,7 +3,7 @@
 {% get_settings %}
 
 {% block body_class %}
-    app--staff-detail theme-light
+    app--staff-detail theme-light no-hero
 {% endblock %}
 
 {% block title %}
