--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page.html
@@ -2,7 +2,7 @@
 {% load wagtailcore_tags wagtailimages_tags util_tags static %}
 
 {% block body_class %}
-    app--form
+app--form no-hero
 {% endblock %}
 
 {% block html_class %}sticky-compensator{% endblock %}
