Hide recapthca required asterisks

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -359,6 +359,11 @@
 
     &__required {
         color: $color--tertiary;
+
+        // Hide recaptcha required asterisks as it floats weirdly above
+        #{$root}--re_captcha_field & {
+            display: none;
+        }
     }
 
     &__instruction {
