Adding legend if in a fieldset

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -284,7 +284,8 @@
         @include hidden();
     }
 
-    label {
+    label,
+    legend {
         display: block;
         margin-bottom: ($gutter / 4);
         cursor: pointer;
