--- a/rca/enquire_to_study/templates/enquire_to_study/includes/enquirey_form.html
+++ b/rca/enquire_to_study/templates/enquire_to_study/includes/enquirey_form.html
@@ -1,5 +1,6 @@
 <form action="." method="POST">
     {% csrf_token %}
     {{ form.as_p }}
+    {{ form.errors }}
     <p><input type="submit" value="Send"></p>
 </form>
